--- a/frontend/core/src/main/webapp/static/app/entry/reset.html
+++ b/frontend/core/src/main/webapp/static/app/entry/reset.html
@@ -19,7 +19,7 @@
       </section>
       <footer class="container-content--after group-btn">
         <button type="submit" class="btn-action" ng-disabled="!resetForm.$valid || resetting" ng-click="resetPassword()">
-          <span class="text-btn" ng-bind="resetting && 'resetting' || 'done'">done</span>
+          <span class="text-btn" ng-bind="resetting && 'resetting' || 'done'"></span>
         </button>
       </footer>
     </form>
